<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coroutines.example.ui.NetworkExampleActivity">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_network_example"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_mock_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/str_mock_success"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_mock_failure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/str_mock_failure"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_result_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_api_result_status"
        android:textAllCaps="false"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/sv_result_content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/holo_orange_light"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_result_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_api_result_content" />
    </ScrollView>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="tv_tips,btn_mock_success,btn_mock_failure,tv_result_status,sv_result_content"
        app:flow_wrapMode="chain" />
</androidx.constraintlayout.widget.ConstraintLayout>